# docs/swagger.json
@@ -1014,7 +1014,7 @@
         },
         "/rooms": {
             "get": {
-                "description": "Возвращает отфильтрованный список номеров с возможностью фильтрации по цене и вместимости",
+                "description": "Возвращает отфильтрованный список номеров с возможностью фильтрации по цене, вместимости, датам бронирования и отелю",
                 "produces": [
                     "application/json"
                 ],
@@ -1039,6 +1039,24 @@
                         "type": "string",
                         "description": "Минимальная вместимость",
                         "name": "capacity",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Дата начала (YYYY-MM-DD)",
+                        "name": "start_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Дата окончания (YYYY-MM-DD)",
+                        "name": "end_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "ID отеля",
+                        "name": "hotel_id",
                         "in": "query"
                     }
                 ],
